kubernetes/store/store-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store
  namespace: jhipster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store
      version: 'v1'
  template:
    metadata:
      labels:
        app: store
        version: 'v1'
    spec:
      containers:
        - name: store-app
          image: deepu105/store
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 8080
#          readinessProbe:
#            httpGet:
#              path: /services/management/health
#              port: http
#            initialDelaySeconds: 20
#            periodSeconds: 15
#            failureThreshold: 6
#          livenessProbe:
#            httpGet:
#              path: /services/management/health
#              port: http
#            initialDelaySeconds: 120
