kubernetes/store/store-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: store-gateway
  namespace: jhipster
  labels:
    gateway: store-gateway
    istio: ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - store.jhipsterlocal.dev
    - port:
        number: 80
        name: http2
        protocol: HTTP2
      hosts:
        - store.jhipsterlocal.dev
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: store-gw-virtualservice
  namespace: jhipster
  labels:
    service: store-gw-virtualservice
spec:
  hosts:
    - store.jhipsterlocal.dev
  gateways:
    - store-gateway
  http:
    - match:
        - uri:
            prefix: /invoice/
      route:
        - destination:
            host: invoice
    - match:
        - uri:
            prefix: /notification/
      route:
        - destination:
            host: notification
    - match:
        - uri:
            prefix: /product/
      route:
        - destination:
            host: product
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: store
