kubernetes/store/store-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: store
  namespace: jhipster
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - host: ingress.local2
      http:
        paths:
          - path: /
            backend:
              serviceName: store
              servicePort: 8080
          - path: /invoice/
            backend:
              serviceName: invoice
              servicePort: 8082
          - path: /notification/
            backend:
              serviceName: notification
              servicePort: 8083
          - path: /product/.*
            backend:
              serviceName: product
              servicePort: 8081
